# gpt-data-core

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/gpt_data_core/: base_schema.py  config.py  embedding_generator.py  embedding_ingestor.py  redis_client.py  token_division_list.py
